Example 2-2. Build a list of Unicode codepoints from a string, using a listcomp

--- a/02-array-seq/array-seq.ipynb
+++ b/02-array-seq/array-seq.ipynb
@@ -65,6 +65,44 @@
     "\n",
     "codes"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example 2-2. Build a list of Unicode codepoints from a string, using a listcomp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[36, 162, 163, 165, 8364, 164]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "symbols = '$¢£¥€¤'\n",
+    "\n",
+    "codes = [ord(symbol) for symbol in symbols]\n",
+    "\n",
+    "codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
