Example 2-3. The same list built by a listcomp and a map/filter composition

--- a/02-array-seq/array-seq.ipynb
+++ b/02-array-seq/array-seq.ipynb
@@ -169,6 +169,57 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example 2-3. The same list built by a listcomp and a map/filter composition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[162, 163, 165, 8364, 164]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "symbols = '$¢£¥€¤'\n",
+    "beyond_ascii = [ord(s) for s in symbols if ord(s) > 127]\n",
+    "beyond_ascii"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[162, 163, 165, 8364, 164]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "beyond_ascii = list(filter(lambda c: c > 127, map(ord, symbols)))\n",
+    "beyond_ascii"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
