Example 2-4. Cartesian product using a list comprehension

--- a/02-array-seq/array-seq.ipynb
+++ b/02-array-seq/array-seq.ipynb
@@ -220,6 +220,92 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example 2-4. Cartesian product using a list comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('black', 'S'),\n",
+       " ('black', 'M'),\n",
+       " ('black', 'L'),\n",
+       " ('white', 'S'),\n",
+       " ('white', 'M'),\n",
+       " ('white', 'L')]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "colors  = ['black', 'white']\n",
+    "sizes   = ['S', 'M', 'L']\n",
+    "tshirts =  [(color, size) for color in colors for size in sizes]\n",
+    "tshirts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('black', 'S')\n",
+      "('black', 'M')\n",
+      "('black', 'L')\n",
+      "('white', 'S')\n",
+      "('white', 'M')\n",
+      "('white', 'L')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for color in colors:\n",
+    "    for size in sizes:\n",
+    "        print((color, size))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('black', 'S'),\n",
+       " ('white', 'S'),\n",
+       " ('black', 'M'),\n",
+       " ('white', 'M'),\n",
+       " ('black', 'L'),\n",
+       " ('white', 'L')]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shirts = [(color, size) for size in sizes for color in colors]\n",
+    "tshirts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
