Example 2-6. Cartesian product in a generator expression

--- a/02-array-seq/array-seq.ipynb
+++ b/02-array-seq/array-seq.ipynb
@@ -357,6 +357,40 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example 2-6. Cartesian product in a generator expression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "black S\n",
+      "black M\n",
+      "black L\n",
+      "white S\n",
+      "white M\n",
+      "white L\n"
+     ]
+    }
+   ],
+   "source": [
+    "colors = ['black', 'white']\n",
+    "sizes = ['S', 'M', 'L']\n",
+    "\n",
+    "for tshirt in ('%s %s' % (c, s) for c in colors for s in sizes):\n",
+    "    print(tshirt)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
