Tuples Are Not Just Immutable Lists: - Example 2-7. Tuples used as records

--- a/02-array-seq/array-seq.ipynb
+++ b/02-array-seq/array-seq.ipynb
@@ -391,6 +391,66 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tuples Are Not Just Immutable Lists"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example 2-7. Tuples used as records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BRA/CE342567\n",
+      "ESP/XDA205856\n",
+      "USA/31195855\n"
+     ]
+    }
+   ],
+   "source": [
+    "nbo_coordinates = (-1.2833300, 36.8166700)\n",
+    "city, year, pop, chg, area = ('Nairobi', 2023, 5_325, 0.78, 703.9)\n",
+    "traveler_ids = [('USA', '31195855'), ('BRA', 'CE342567'), ('ESP', 'XDA205856')]\n",
+    "\n",
+    "for passport in sorted(traveler_ids):\n",
+    "    print('%s/%s' % passport)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "USA\n",
+      "BRA\n",
+      "ESP\n"
+     ]
+    }
+   ],
+   "source": [
+    "for country, _ in traveler_ids:\n",
+    "    print(country)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
