--- a/02-array-seq/array-seq.ipynb
+++ b/02-array-seq/array-seq.ipynb
@@ -1032,6 +1032,52 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example 2-13. Line items from a flat-file invoice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    $17.50   imoroni PiBrella                  \n",
+      "     $4.95   mm Tactile Switch x20             \n",
+      "    $28.00   anavise Jr. - PV-201              \n",
+      "    $34.95   iTFT Mini Kit 320x240             \n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "invoice = \"\"\"\n",
+    "0.....6.................................40........52...55........\n",
+    "1909 Pimoroni PiBrella                      $17.50    3    $52.50\n",
+    "1489 6mm Tactile Switch x20                  $4.95    2    $9.90\n",
+    "1510 Panavise Jr. - PV-201                  $28.00    1    $28.00\n",
+    "1601 PiTFT Mini Kit 320x240                 $34.95    1    $34.95\n",
+    "\"\"\"\n",
+    "\n",
+    "SKU = slice(0, 6)\n",
+    "DESCRIPTION = slice(6, 40)\n",
+    "UNIT_PRICE = slice(40, 52)\n",
+    "QUANTITY = slice(52, 55)\n",
+    "ITEM_TOTAL = slice(55, None)\n",
+    "\n",
+    "line_items = invoice.split('\\n')[2:]\n",
+    "\n",
+    "for item in line_items:\n",
+    "    print(item[UNIT_PRICE], item[DESCRIPTION])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
