Example 2-14. A list with three lists of length 3 can represent a tic-tac-toe board

--- a/02-array-seq/array-seq.ipynb
+++ b/02-array-seq/array-seq.ipynb
@@ -1277,6 +1277,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['_', '_', '_'], ['_', '_', '_'], ['_', '_', '_']]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "board = [['_'] * 3 for i in range(3)]\n",
+    "board"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['_', '_', '_'], ['_', '_', 'X'], ['_', '_', '_']]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "board[1][2] = 'X'\n",
+    "board"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
