A += Assignment Puzzler -- Example 2-16. A riddle

--- a/02-array-seq/array-seq.ipynb
+++ b/02-array-seq/array-seq.ipynb
@@ -1553,11 +1553,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### A += Assignment Puzzler\n",
+    "#### Example 2-16. A riddle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TypeError(\"'tuple' object does not support item assignment\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = (1, 2, [30, 40])\n",
+    "try:\n",
+    "    t[2] += [50, 60]\n",
+    "except TypeError as e:\n",
+    "    print(repr(e))"
+   ]
   }
  ],
  "metadata": {
