--- a/02-array-seq/array-seq.ipynb
+++ b/02-array-seq/array-seq.ipynb
@@ -1610,6 +1610,42 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example 2-18. Bytecode for the expression s[a] += b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1           0 LOAD_NAME                0 (s)\n",
+      "              2 LOAD_NAME                1 (a)\n",
+      "              4 DUP_TOP_TWO\n",
+      "              6 BINARY_SUBSCR\n",
+      "              8 LOAD_NAME                2 (b)\n",
+      "             10 INPLACE_ADD\n",
+      "             12 ROT_THREE\n",
+      "             14 STORE_SUBSCR\n",
+      "             16 LOAD_CONST               0 (None)\n",
+      "             18 RETURN_VALUE\n"
+     ]
+    }
+   ],
+   "source": [
+    "import dis \n",
+    "\n",
+    "dis.dis('s[a] +=b')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
